# facial-image-warping

./: .gitignore  README.md  app.py  desktop_gui.py  pyproject.toml  streamlit_app.py  webcam_demo.py
docs/: Facial_Image_Warping_DSP_Raporu.docx  project_report_dsp.md
gui/: dashboard.py
outputs/landmarks/: test_face_1_landmarks.csv  test_face_1_landmarks.json  test_face_2_landmarks.csv  test_face_2_landmarks.json  test_face_3_landmarks.csv  test_face_3_landmarks.json
src/facial_image_warping/: __init__.py  aging_filter.py  evaluation.py  expression_transfer.py  face_detection.py  fourier_analysis.py  geometric_warping.py  input_module.py  landmark_detection.py  preprocessing.py  visualization.py
tests/: __init__.py  test_smoke.py
