[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "facial-image-warping"
version = "0.1.0"
description = "Modular DSP-oriented pipeline for facial image warping, aging, and expression transformation."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "matplotlib>=3.11,<4",
  "mediapipe==0.10.9",
  "numpy>=1.26,<2.0",
  "opencv-python>=4.10,<5",
  "Pillow>=12.3,<13",
]

[project.optional-dependencies]
dev = [
  "pytest>=9,<10",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
